Fixing userdata creation for c string and discovered how the skills work and created structures & setters to handle it

--- a/memhack-dll/memhack/memhack.vcxproj
+++ b/memhack-dll/memhack/memhack.vcxproj
@@ -172,6 +172,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="itb_userdata.h" />
     <ClInclude Include="memory.h" />
     <ClInclude Include="process.h" />
     <ClInclude Include="log.h" />
