Initial move and cut of C++ scanner

--- a/memhack-dll/memhack/memhack.vcxproj.filters
+++ b/memhack-dll/memhack/memhack.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="safememory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="scanner_core.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="scanner_lua.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="memory.h">
@@ -63,6 +69,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="itb_userdata.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scanner_core.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scanner_lua.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
