--- a/memhack-dll/memhack/memhack.vcxproj
+++ b/memhack-dll/memhack/memhack.vcxproj
@@ -164,6 +164,8 @@
     <ClCompile Include="log.cpp" />
     <ClCompile Include="lua_helpers.cpp" />
     <ClCompile Include="safememory.cpp" />
+    <ClCompile Include="scanner_core.cpp" />
+    <ClCompile Include="scanner_lua.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -178,6 +180,8 @@
     <ClInclude Include="log.h" />
     <ClInclude Include="lua_helpers.h" />
     <ClInclude Include="safememory.h" />
+    <ClInclude Include="scanner_core.h" />
+    <ClInclude Include="scanner_lua.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
