--- a/memhack-dll/memhack/memhack.vcxproj
+++ b/memhack-dll/memhack/memhack.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="scanner\scanner_basic.cpp" />
     <ClCompile Include="scanner\scanner_basic_avx2.cpp" />
     <ClCompile Include="scanner\scanner_sequence.cpp" />
+    <ClCompile Include="scanner\scanner_heap.cpp" />
     <ClCompile Include="scanner\scanner_lua.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -188,6 +189,7 @@
     <ClInclude Include="scanner\scanner_basic_avx2.h" />
     <ClInclude Include="scanner\scanner.h" />
     <ClInclude Include="scanner\scanner_sequence.h" />
+    <ClInclude Include="scanner\scanner_heap.h" />
     <ClInclude Include="scanner\scanner_lua.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
